# AI-agent-building-blocks

./: .gitattributes  .gitignore  COMPLETION_REPORT.md  CURRICULUM_COMPLETION_SUMMARY.md  GENERATION_SUMMARY.md  IMPLEMENTATION_TEMPLATES.md  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: index.md  overview.md
docs/phase-1-foundations/: 0.0-phase-1-foundations-index.md  1.1-openai-basics.md  1.2-pydantic-basics.md  1.3-structured-output.md  1.4-conversations.md  1.5-embeddings.md  1.6-vector-search.md  conversations.md  embeddings.md  openai-basics.md  phase-1-index.md  pydantic-basics.md  structured-output.md  vector-search.md
docs/phase-2-building-ai-systems/: 0.0-phase-2-building-ai-systems-index.md  2.1-text-preparation.md  2.2-information-extraction.md  2.3-classification-routing.md  2.4-rag-pipeline.md  2.5-agent-orchestration.md  2.6-context-engineering.md  2.7-memory-patterns.md  2.8-prompt-engineering.md  2.9-evaluation-basics.md  agent-orchestration.md  classification-routing.md  context-engineering.md  evaluation-basics.md  index.md  information-extraction.md  memory-patterns.md  prompt-engineering.md  rag-pipeline.md  text-preparation.md
docs/phase-3-advanced-patterns/: 0.0-phase-3-advanced-patterns-index.md  3.1-advanced-agent-patterns.md  3.2-multi-agent-systems.md  3.3-advanced-memory.md  3.4-advanced-rag.md  3.5-iterative-processing.md  3.6-fastapi-basics.md  3.7-clustering-topics.md  3.8-evaluation-systems.md  3.9-document-processing.md  advanced-agent-patterns.md  advanced-memory.md  advanced-rag.md  clustering-topics.md  document-processing.md  evaluation-systems.md  fastapi-basics.md  index.md  iterative-processing.md  multi-agent-systems.md
docs/phase-4-production/: 0.0-phase-4-production-index.md  4.1-docker.md  4.2-postgresql-pgvector.md  4.3-observability.md  4.4-guardrails.md  4.5-async-background-jobs.md  4.6-mcp-servers.md  4.7-cloud-deployment.md  4.8-cicd.md  async-background-jobs.md  cicd.md  cloud-deployment.md  docker.md  guardrails.md  index.md  mcp-servers.md  observability.md  postgresql-pgvector.md
docs/phase-5-specialization/: 0.0-phase-5-specialization-index.md  5.1-fine-tuning.md  5.2-custom-embeddings.md  5.3-advanced-nlp.md  5.4-multimodal.md  advanced-nlp.md  custom-embeddings.md  fine-tuning.md  index.md  multimodal.md
indexes/: Phase 1 - Foundations.md  Phase 2 - Core AI Engineering + Agent Fundamentals.md  Phase 3 - Advanced Patterns + Deployment.md  Phase 4 - Production & Operations.md  Phase 5 - Specialize.md
modules/: README.md  index.md  requirements.txt
modules/Phase 1 - Foundations/1.1-openai-basics/: 05_response_object.py  07_models.py  08_error_handling.py
modules/Phase 1 - Foundations/1.2-pydantic-basics/: 06_from_raw_data.py  07_model_methods.py
modules/Phase 1 - Foundations/1.5-embeddings/: README.md  (+3 more)
modules/phase-1-foundations/: 0.0-phase-1-foundations-index.md  1.1-openai-basics.md  1.2-pydantic-basics.md  1.3-structured-output.md  1.4-conversations.md  1.5-embeddings.md  1.6-vector-search.md
modules/phase-2-building-ai-systems/: 2.1-text-preparation.md  2.2-information-extraction.md  2.3-classification-routing.md  2.4-rag-pipeline.md  2.5-agent-orchestration.md  2.6-context-engineering.md  2.7-memory-patterns.md  2.8-prompt-engineering.md  2.9-evaluation-basics.md
modules/phase-3-advanced-patterns/: 3.1-advanced-agent-patterns.md  3.2-multi-agent-systems.md  3.3-advanced-memory.md  3.4-advanced-rag.md  3.5-iterative-processing.md  3.6-fastapi-basics.md  3.7-clustering-topics.md  3.8-evaluation-systems.md  3.9-document-processing.md
modules/phase-4-production/: 4.1-docker.md  4.2-postgresql-pgvector.md  4.3-observability.md  4.4-guardrails.md  4.5-async-background-jobs.md  4.6-mcp-servers.md  4.7-cloud-deployment.md  4.8-cicd.md
modules/phase-5-specialization/: 0.0-phase-5-specialization-index.md  5.1-fine-tuning.md  5.2-custom-embeddings.md  5.3-advanced-nlp.md  5.4-multimodal.md
scripts/phase-4-production/: __init__.py
utils/: __init__.py  _load_env.py  data_loader.py  models.py  setup_models.py
(+443 files in other folders)
