[project]
name = "sina-agent-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
